[package]
name = "arceos-shell"
version = "0.1.0"
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
use-ramfs = [
    "axstd/myfs",
    "axstd/driver-ramdisk",
    "dep:axfs_vfs",
    "dep:axfs_ramfs",
    "dep:crate_interface",
]
irq = ["axplat-aarch64-d3000m-n80-laptop/irq", "axstd/irq"]
default = ["axstd", "use-ramfs"]

[dependencies]
axfs_vfs = { version = "0.1", optional = true }
axfs_ramfs = { version = "0.1", optional = true }
crate_interface = { version = "0.1", optional = true }
axstd = { git = "https://github.com/arceos-org/arceos.git", features = [
    "myplat",
    "alloc",
    "fs",
    "bus-mmio"
], optional = true }
axplat-aarch64-d3000m-n80-laptop = { workspace = true }
