[package]
name = "rstiny"
version.workspace = true
edition.workspace = true
homepage.workspace = true

[dependencies]
log = "0.4"
talc = "4.4.3"
axplat-aarch64-d3000m-n80-laptop = { workspace = true,features = [] }
axplat = "0.3.0"
spin = "0.10.0"
lazy_static = {version = "1.5.0", features = ["spin_no_std"]}
lazyinit = "0.2.0"
volatile = "0.6.1"
embedded-graphics = "0.8"
embedded-graphics-core = "0.4"
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }
kspin = "0.1.1"