[package]
name = "rstiny"
version.workspace = true
edition.workspace = true
homepage.workspace = true

[dependencies]
log = "0.4"
talc = "4.4.3"
axplat-aarch64-d3000m-n80-laptop = { workspace = true,features = [] }
axplat = "0.3.0"
spin = "0.10.0"
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }
